Clean repo structure, update agentic engine, and prepare for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Node
+node_modules/
+dist/
+build/
+
+# Python
+.venv/
+__pycache__/
+*.pyc
+
+# Env files
 .env
+
+# Generated outputs
+backend/output/
+
+# OS
+.DS_Store
